@@ -312,3 +312,4 @@ Issue #2146411 by johnv: Fixed old&new state in Rules integration.
 Issue #2137149 by johnv: Fixed contructor of WorkflowTransition.
 Issue #2137149 by johnv: Added README.txt for Workflow_rules.
 Issue #2115671 by johnv: Changed workflow_views to Views 3 API structure.
+Issue #2019345 by johnv: Fixed selection of Options in Workflow object.
